<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_yourlunch"
            android:icon="@drawable/ic_yourlunch_white_24dp"
            android:title="@string/drawer_item_yourlunch" />
        <item
            android:id="@+id/drawer_menu_item_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/drawer_item_settings" />
        <item
            android:id="@+id/drawer_menu_item_chat"
            android:icon="@drawable/ic_textsms_white_24dp"
            android:title="@string/drawer_item_chat" />
        <item
            android:id="@+id/drawer_menu_item_logout"
            android:icon="@drawable/ic_logout_white_24dp"
            android:title="@string/drawer_item_logout" />

    </group>

        </menu>