<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/drawer_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_header_height"
        android:scaleType="fitCenter"
        android:paddingLeft="5dp"
        app:srcCompat="@drawable/drawer_header" />

    <TextView
        android:id="@+id/drawer_header_go4lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:fontFamily="@font/ap_font"
        android:textSize="30sp"
        android:layout_marginTop="12dp"
        android:background="@color/primaryDark"
        android:paddingTop="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textStyle="bold"
        android:paddingBottom="2dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:elevation="0dp"
        android:textAllCaps="true" />

    <RelativeLayout
        android:id="@+id/drawer_header_pfp_rl"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/black"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="2dp"
        android:layout_alignLeft="@id/drawer_header_image"
        android:background="@drawable/shape_circle_profile_header">

    <ImageView
        android:id="@+id/drawer_header_pfp"
        android:src="@drawable/shape_circle_profile_header"
        android:layout_width="73dp"
        android:layout_height="75dp"
        android:elevation="4dp"
        android:layout_centerInParent="true"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/drawer_header_username"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="30dp"
        android:layout_toEndOf="@+id/drawer_header_pfp_rl"
        android:layout_alignTop="@id/drawer_header_pfp_rl"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/drawer_header_email"
        android:text="@string/mail"
        android:layout_below="@id/drawer_header_username"
        android:layout_alignLeft="@id/drawer_header_username"
        android:paddingLeft="12dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/drawer_header_l1"
        android:layout_below="@id/drawer_header_email"
        android:layout_width="180dp"
        android:layout_height="4dp"
        android:background="@color/divider" />

</RelativeLayout>